styles/index.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');

* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}

/* THEME START */

body.light {
  --background: #fff;
  --font-color: #000;
}

body.dark {
  --background: #222;
  --font-color: #fff;
}

/* THEME END */

body {
  font-family: 'Roboto', sans-serif;
  background-color: var(--background);
  transition: color 0.3s, background-color 0.3s;
}

header,
section,
footer {
  max-width: 800px;
  margin: 2rem auto;
}

header {
  font-size: 1.5rem;
  font-weight: 700;
  display: flex;
  justify-content: space-between;
  align-items: center;
  color: var(--font-color);
}

img {
  width: 100%;
  height: auto;
}

a {
  color: var(--font-color);
  text-decoration: none;
}

header .theme-switch {
  height: 1.5rem;
  width: 1.5rem;
  transition: transform 0.2s ease;
}

header .theme-switch:hover {
  cursor: pointer;
  transform: scale(1.05);
}

.posts {
  padding: 1rem 2rem;
}

.posts .card {
  display: block;
  border-radius: 1rem;
  box-shadow: 1px 1px 5px 2px rgba(0, 0, 0, 0.4);
  padding: 1.5rem;
  transition: transform 0.2s ease;
  margin-bottom: 2rem;
}

.posts .card:last-child {
  margin-bottom: 0;
}

.posts .card:hover {
  transform: scale(1.01);
}

.posts .card .thumbnail {
  border-radius: 1rem;
  overflow: hidden;
}

.posts .card h2 {
  font-size: 2rem;
  margin: 1rem 0;
  color: var(--font-color);
}

.posts .card .preview {
  margin: 1rem 0;
  font-size: 0.9rem;
  color: var(--font-color);
}

.posts .card .date {
  font-size: 0.8rem;
  color: #999;
}

footer {
  text-align: center;
  margin-top: 3rem;
  color: var(--font-color);
}

footer .socials {
  margin-bottom: 1rem;
}

footer .socials a {
  display: inline-block;
  margin-right: 1rem;
  transition: transform 0.2s ease;
}

footer .socials a:hover {
  transform: scale(1.1);
}

footer p {
  font-size: 0.8rem;
}

